--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,16 @@
 @plugin "daisyui";
 @import "tw-animate-css";
 
+.glow-text {
+  color: #fff;
+  transition: text-shadow 0.3s ease-in-out;
+}
+
+.glow-text:hover {
+  text-shadow: 0 0 10px rgba(50, 197, 255, 0.8), 
+               0 0 20px rgb(189, 233, 255)
+}
+
 body {
   font-family: 'Nunito', sans-serif;
   font-weight: 400;
